Fixed text overflow issue using word-break

--- a/css/main.css
+++ b/css/main.css
@@ -276,6 +276,7 @@ body[data-theme=dark] .preferences-bar button {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  word-break: break-word;
 }
 .todo-list .todo-body .tasks .task [type=checkbox] {
   opacity: 0;
